--- a/html/index.html
+++ b/html/index.html
@@ -9,7 +9,54 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
 </head>
 <body>
-    
+	<nav class="navbar navbar-expand-lg bg-body-tertiary">
+  		<div class="container-fluid">
+    		<a class="navbar-brand" href="#">HOME</a>
+    		<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
+      			<span class="navbar-toggler-icon"></span>
+    		</button>
+    		<div class="collapse navbar-collapse" id="navbarScroll">
+	      		<ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
+	        		<li class="nav-item dropdown">
+	          			<a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">조회</a>
+	          			<ul class="dropdown-menu">
+	            			<li><a class="dropdown-item" href="#">계좌개설</a></li>
+	            			<li><a class="dropdown-item" href="#">계좌수정</a></li>
+	          			</ul>
+	        		</li>
+	        		<li class="nav-item dropdown">
+	          			<a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">거래</a>
+	          			<ul class="dropdown-menu">
+	            			<li><a class="dropdown-item" href="#">입금</a></li>
+	            			<li><a class="dropdown-item" href="#">이체</a></li>
+	            			<li><a class="dropdown-item" href="#">자동이체</a></li>
+	          			</ul>
+	        		</li>
+	        		<li class="nav-item">
+	          			<a class="nav-link" href="#">환율</a>
+	        		</li>
+	        		<li class="nav-item">
+	          			<a class="nav-link" href="#">주식</a>
+	        		</li>
+	        	</ul>
+        		<form>
+        			<ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll float-end" style="--bs-scroll-height: 100px;">
+	        			<li class="nav-item">
+	          				<a class="nav-link" href="#">로그인</a>
+	        			</li>
+	        			<li class="nav-item">
+	          				<a class="nav-link" href="#">회원가입</a>
+	        			</li>
+        			</ul>
+        		</form>
+	    	</div>
+	  	</div>
+	</nav>
+	<div class="container-fluid">
+		<div class="row">
+			<iframe width="1280" height="720" src="https://www.youtube.com/embed/FrAc-yORdAo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+		</div>
+	</div>
 
 
 
@@ -18,6 +65,7 @@
 
 
     
+
 
 
 
