--- a/html/index.html
+++ b/html/index.html
@@ -52,22 +52,60 @@
 	    	</div>
 	  	</div>
 	</nav>
+	<br>
 	<div class="container-fluid">
+		<div class="h4 d-flex justify-content-center">인플루언서</div>
+		<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 		<div class="row">
-			<iframe width="1280" height="720" src="https://www.youtube.com/embed/FrAc-yORdAo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+			<div class="h4 d-flex justify-content-center">실시간 유튜브 페이지 API로 가져올 예정</div>
+			<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 		</div>
+		<div class="row d-flex justify-content-around">
+			<div class="card" style="width: 13rem;">
+  				<img src="img/man.png" class="card-img-top" alt="...">
+  				<div class="card-body">
+    				<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+  				</div>
+			</div>
+			<div class="card" style="width: 13rem;">
+	  			<img src="img/man.png" class="card-img-top" alt="...">
+	  			<div class="card-body">
+	    			<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+	  			</div>
+			</div>
+			<div class="card" style="width: 13rem;">
+	  			<img src="img/man.png" class="card-img-top" alt="...">
+	  			<div class="card-body">
+	    			<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+	  			</div>
+			</div>
+			<div class="card" style="width: 13rem;">
+	  			<img src="img/man.png" class="card-img-top" alt="...">
+	  			<div class="card-body">
+	    			<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+	  			</div>
+			</div>
+			<div class="card" style="width: 13rem;">
+	  			<img src="img/man.png" class="card-img-top" alt="...">
+	  			<div class="card-body">
+	    			<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+	  			</div>
+			</div>
+			<div class="card" style="width: 13rem;">
+	  			<img src="img/man.png" class="card-img-top" alt="...">
+	  			<div class="card-body">
+	    			<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+	  			</div>
+			</div>
+		</div>	
 	</div>
-
-
-
-
-
-
-
-    
-
-
-
+	<br>
+	<div class="container-fluid">
+		<div class="h4 d-flex justify-content-center">NEWS</div>
+		<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+		<div class="h4 d-flex justify-content-center">실시간 뉴스 금융 페이지 API로 가져올 예정</div>
+		<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+	</div>
 
     <!-- 부트스트랩 JS-->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.7/dist/umd/popper.min.js" integrity="sha384-zYPOMqeu1DAVkHiLqWBUTcbYfZ8osu1Nd6Z89ify25QV9guujx43ITvfi12/QExE" crossorigin="anonymous"></script>
@@ -76,7 +114,7 @@
     <script src="https://code.jquery.com/jquery-3.7.0.min.js" integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g=" crossorigin="anonymous"></script>
     <script type="text/javascirpt">
 
-
+		
 
     </script>
 </body>
