--- a/html/accountCorrect.html
+++ b/html/accountCorrect.html
@@ -20,23 +20,28 @@
       				<li class="nav-item dropdown">
         				<a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">조회</a>
         				<ul class="dropdown-menu">
-          					<li><a class="dropdown-item" href="#">계좌개설</a></li>
-          					<li><a class="dropdown-item" href="#">계좌수정</a></li>
+        					<li><a class="dropdown-item" href="accountMain.html">계좌조회</a></li>
+          					<li><a class="dropdown-item" href="accountAdd.html">계좌개설</a></li>
+          					<li><a class="dropdown-item" href="accountCorrect.html">계좌수정</a></li>
         				</ul>
       				</li>
       				<li class="nav-item dropdown">
         				<a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">거래</a>
         				<ul class="dropdown-menu">
-          					<li><a class="dropdown-item" href="#">입금</a></li>
-          					<li><a class="dropdown-item" href="#">이체</a></li>
-          					<li><a class="dropdown-item" href="#">자동이체</a></li>
+          					<li><a class="dropdown-item" href="depositMain.html">입금</a></li>
+          					<li><a class="dropdown-item" href="depositTransfer.html">이체</a></li>
+          					<li><a class="dropdown-item" href="depositAutoTransfer.html">자동이체</a></li>
         				</ul>
       				</li>
       				<li class="nav-item">
-        				<a class="nav-link" href="#">환율</a>
+        				<a class="nav-link" href="exchangeRate.html">환율</a>
       				</li>
-      				<li class="nav-item">
-        				<a class="nav-link" href="#">주식</a>
+      				<li class="nav-item dropdown">
+        				<a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">주식</a>
+        				<ul class="dropdown-menu">
+        					<li><a class="dropdown-item" href="domesticStock.html">국내</a></li>
+          					<li><a class="dropdown-item" href="foreignStock.html">해외</a></li>
+        				</ul>
       				</li>
       			</ul>
      			<form>
