--- a/html/depositMain.html
+++ b/html/depositMain.html
@@ -11,7 +11,7 @@
 <body>
 	<nav class="navbar navbar-expand-lg bg-body-tertiary">
 		<div class="container-fluid">
-  			<a class="navbar-brand" href="#">HOME</a>
+  			<a class="navbar-brand" href="index.html">HOME</a>
   			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
    				<span class="navbar-toggler-icon"></span>
   			</button>
