--- a/html/index.html
+++ b/html/index.html
@@ -47,10 +47,14 @@
      			<form>
      				<ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll float-end" style="--bs-scroll-height: 100px;">
         				<li class="nav-item">
-          					<a class="nav-link" href="#">로그인</a>
+          					<button type="button" id="btnSignUp"class="btn" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
+		 						 로그인
+							</button>
         				</li>
         				<li class="nav-item">
-          					<a class="nav-link" href="#">회원가입</a>
+          					<button type="button" id="btnSignIn"class="btn" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
+		 						 회원가입
+							</button>
         				</li>
        				</ul>
        			</form>
@@ -117,10 +121,11 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.min.js" integrity="sha384-Y4oOpwW3duJdCWv5ly8SCFYWqFDsfob/3GkgExXKV4idmbt98QcxXYs9UoXAB7BZ" crossorigin="anonymous"></script>
     <!-- JQUERY -->
     <script src="https://code.jquery.com/jquery-3.7.0.min.js" integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g=" crossorigin="anonymous"></script>
-    <script type="text/javascirpt">
+    <script type="text/javascript">
 
-		
 
+
+					
     </script>
 </body>
 </html>
