--- a/html/index.html
+++ b/html/index.html
@@ -17,13 +17,8 @@
   			</button>
 			<div class="collapse navbar-collapse" id="navbarScroll">
      			<ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
-      				<li class="nav-item dropdown">
-        				<a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">조회</a>
-        				<ul class="dropdown-menu">
-        					<li><a class="dropdown-item" href="accountMain.html">계좌조회</a></li>
-          					<li><a class="dropdown-item" href="accountAdd.html">계좌개설</a></li>
-          					<li><a class="dropdown-item" href="accountCorrect.html">계좌수정</a></li>
-        				</ul>
+      				<li class="nav-item">
+        				<a class="nav-link" href="accountMain.html">조회</a>
       				</li>
       				<li class="nav-item dropdown">
         				<a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">거래</a>
@@ -44,20 +39,6 @@
         				</ul>
       				</li>
       			</ul>
-     			<form>
-     				<ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll float-end" style="--bs-scroll-height: 100px;">
-        				<li class="nav-item">
-          					<button type="button" id="btnSignUp"class="btn" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
-		 						 로그인
-							</button>
-        				</li>
-        				<li class="nav-item">
-          					<button type="button" id="btnSignIn"class="btn" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
-		 						 회원가입
-							</button>
-        				</li>
-       				</ul>
-       			</form>
     		</div>
   		</div>
 	</nav>
@@ -66,7 +47,7 @@
 		<div class="h4 d-flex justify-content-center">인플루언서</div>
 		<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 		<div class="row">
-			<div class="h4 d-flex justify-content-center">실시간 유튜브 페이지 API로 가져올 예정</div>
+			<div class="h4 d-flex justify-content-center">실시간 유튜브 페이지 API로 가져올 예정</div>	
 			<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 		</div>
 		<div class="row d-flex justify-content-around">
@@ -115,17 +96,14 @@
 		<div class="h4 d-flex justify-content-center">실시간 뉴스 금융 페이지 API로 가져올 예정</div>
 		<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 	</div>
-
     <!-- 부트스트랩 JS-->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.7/dist/umd/popper.min.js" integrity="sha384-zYPOMqeu1DAVkHiLqWBUTcbYfZ8osu1Nd6Z89ify25QV9guujx43ITvfi12/QExE" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.min.js" integrity="sha384-Y4oOpwW3duJdCWv5ly8SCFYWqFDsfob/3GkgExXKV4idmbt98QcxXYs9UoXAB7BZ" crossorigin="anonymous"></script>
     <!-- JQUERY -->
     <script src="https://code.jquery.com/jquery-3.7.0.min.js" integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g=" crossorigin="anonymous"></script>
-    <script type="text/javascript">
-
-
-
-					
+    <script type="text/javascript">	
+		
+    	
     </script>
 </body>
 </html>
