--- a/html/accountMain.html
+++ b/html/accountMain.html
@@ -17,13 +17,8 @@
   			</button>
 			<div class="collapse navbar-collapse" id="navbarScroll">
      			<ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
-      				<li class="nav-item dropdown">
-        				<a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">조회</a>
-        				<ul class="dropdown-menu">
-        					<li><a class="dropdown-item" href="accountMain.html">계좌조회</a></li>
-          					<li><a class="dropdown-item" href="accountAdd.html">계좌개설</a></li>
-          					<li><a class="dropdown-item" href="accountCorrect.html">계좌수정</a></li>
-        				</ul>
+      				<li class="nav-item">
+        				<a class="nav-link" href="accountMain.html">조회</a>
       				</li>
       				<li class="nav-item dropdown">
         				<a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">거래</a>
@@ -44,16 +39,6 @@
         				</ul>
       				</li>
       			</ul>
-     			<form>
-     				<ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll float-end" style="--bs-scroll-height: 100px;">
-        				<li class="nav-item">
-          					<a class="nav-link" href="#">로그인</a>
-        				</li>
-        				<li class="nav-item">
-          					<a class="nav-link" href="#">회원가입</a>
-        				</li>
-       				</ul>
-       			</form>
     		</div>
   		</div>
 	</nav>
@@ -65,7 +50,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.min.js" integrity="sha384-Y4oOpwW3duJdCWv5ly8SCFYWqFDsfob/3GkgExXKV4idmbt98QcxXYs9UoXAB7BZ" crossorigin="anonymous"></script>
     <!-- JQUERY -->
     <script src="https://code.jquery.com/jquery-3.7.0.min.js" integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g=" crossorigin="anonymous"></script>
-    <script type="text/javascirpt">
+    <script type="text/javascript">
 
 		
 
