--- a/html/index.html
+++ b/html/index.html
@@ -119,7 +119,6 @@
 	      				
 	      			<div class="modal-footer d-flex justify-content-center">
 	      				<button type="button" class="btn btn-primary" id="modalCheck">로그인</button>
-	        			<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">취소</button>
 	      			</div>
 	    		</div>
 	  		</div>
@@ -156,7 +155,6 @@
 	      			</div>
 	      			<div class="modal-footer d-flex justify-content-center">
 	      				<button type="button" class="btn btn-primary" id="modalCheck">회원가입</button>
-	      				<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">취소</button>
 	      			</div>
 	    		</div>
 	  		</div>
@@ -165,33 +163,13 @@
     <!-- 부트스트랩 JS-->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.7/dist/umd/popper.min.js" integrity="sha384-zYPOMqeu1DAVkHiLqWBUTcbYfZ8osu1Nd6Z89ify25QV9guujx43ITvfi12/QExE" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.min.js" integrity="sha384-Y4oOpwW3duJdCWv5ly8SCFYWqFDsfob/3GkgExXKV4idmbt98QcxXYs9UoXAB7BZ" crossorigin="anonymous"></script>
-    <!-- JQUERY -->
+	<!-- JQUERY -->
     <script src="https://code.jquery.com/jquery-3.7.0.min.js" integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g=" crossorigin="anonymous"></script>
-    <script type="text/javascript">	
+	<script type="text/javascript">	
 		
-/*     
-	function login() {
-    	  var signinId = document.getElementById("signinId").value;
-    	  var signinPw = document.getElementById("signinPw").value;
-
-    	  // 로그인 요청을 보내고 응답을 받습니다.
-    	  var xhr = new XMLHttpRequest();
-    	  xhr.open("POST", "/login");
-    	  xhr.setRequestHeader("Content-Type", "application/x-www-form-urlencoded");
-    	  xhr.send("signinId=" + signinId + "&signinPw=" + signinPw);
-
-    	  // 로그인 응답을 처리합니다.
-    	  xhr.onload = function() {
-    	    if (xhr.status === 200) {
-    	      // 로그인이 성공했습니다.
-    	      window.location.href = "/next-page";
-    	    } else {
-    	      // 로그인이 실패했습니다.
-    	      alert("로그인에 실패했습니다.");
-    	    }
-    	  };
-    	}
-*/
+    	$(function() {
+    	  	$('#signIn').modal('show');
+    	});
 
     </script>
 </body>
