--- a/html/accountMain.html
+++ b/html/accountMain.html
@@ -13,7 +13,7 @@
 <body>
 	<nav class="navbar navbar-expand-lg bg-body-tertiary">
 		<div class="container-fluid">
-  			<a class="navbar-brand" href="index.html">HOME</a>
+  			<a class="navbar-brand h1" href="index.html">KOKOA BANK</a>
   			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
    				<span class="navbar-toggler-icon"></span>
   			</button>
@@ -48,24 +48,24 @@
   		<div class="carousel-inner">
 	    	<div class="carousel-item active">
 	    		<div class="d-flex justify-content-center">
-		    		<div class="rounded border border-dark col-md-3 text-center" style="padding: 30px; background: #FBEFFB;">
+		    		<div class="rounded border border-dark col-md-4 text-center" style="padding: 30px; background: #FBEFFB;">
 		    			<p class="fs-4">예금주: 이준혁</p>
-		    			<p class="fs-4">계좌명: 이준혁 통장 			
+		    			<p class="fs-4">계좌명: 이준혁 통장1</p>			
 		    			<p class="fs-4">계좌번호: 3414-34-3141</p>
 		    			<p class="fs-4">개설일: 2023-06-01</p>
 		    		</div>
 	    		</div>
 	    		<br>
 	    		<div class="d-flex justify-content-center">
-	    			<a class="btn btn-outline-success" role="button" aria-disabled="true" href="accountAdd.html">계좌개설</a>
-	    			<a class="btn btn-outline-primary" role="button" aria-disabled="true" href="accountCorrect.html">계좌수정</a>
+	    			<a class="btn btn-outline-success" role="button" aria-disabled="true" data-bs-toggle="modal" data-bs-target="#accountAdd">계좌개설</a>
+	    			<a class="btn btn-outline-primary" role="button" aria-disabled="true" data-bs-toggle="modal" data-bs-target="#accountCorrect">계좌수정</a>
 	    		</div>
 	    		<br>
 	    		<div class="d-flex justify-content-start">
 	    			<button type="button" class="btn btn-danger col-md-auto" id="btnSearch">
 						<i class="fa-solid fa-magnifying-glass"></i>
 					</button>
-	    			<div class="col-md-2">
+	    			<div class="col-md-1">
     					<select id="" class="form-select">
       						<option selected disabled>기간</option>
       						<option>1개월</option>
@@ -73,63 +73,117 @@
       						<option>6개월</option>
     					</select>
   					</div>
-	    			<div class="col-md-2">
+	    			<div class="col-md-1">
     					<input type="text" class="form-control datepicker" placeholder="시작일">
   					</div>
-	    			<div class="col-md-2">
+	    			<div class="col-md-1">
     					<input type="text" class="form-control datepicker" placeholder="종료일">
   					</div> 
 	    		</div>
 	    		<table class="table">
 				  	<thead>
 				    	<tr>
-				      		<th scope="col">#</th>
-				      		<th scope="col">First</th>
-				      		<th scope="col">Last</th>
-				      		<th scope="col">Handle</th>
+				      		<th scope="col">날짜</th>
+				      		<th scope="col">내용</th>
+				      		<th scope="col">금액</th>
+				      		<th scope="col">입·출금</th>
+				      		<th scope="col">잔액<th>
 				    	</tr>
 				  	</thead>
 			  		<tbody>
 				    	<tr>
-				      		<th scope="row">1</th>
-				      		<td>Mark</td>
-				      		<td>Otto</td>
-				      		<td>@mdo</td>
+				      		<th scope="row">2023-06-01</th>
+				      		<td>순대국</td>
+				      		<td>5,000</td>
+				      		<td>출금</td>
+				      		<td>500,000</td>
 				    	</tr>
 				    	<tr>
-				      		<th scope="row">2</th>
-				      		<td>Jacob</td>
-				      		<td>Thornton</td>
-				      		<td>@fat</td>
+				      		<th scope="row">2023-06-02</th>
+				      		<td>순대국</td>
+				      		<td>5,000</td>
+				      		<td>출금</td>
+				      		<td>500,000</td>
 				    	</tr>
 				    	<tr>
-				      		<th scope="row">3</th>
-				      		<td colspan="2">Larry the Bird</td>
-				      		<td>@twitter</td>
+				      		<th scope="row">2023-06-05</th>
+				      		<td>순대국</td>
+				      		<td>5,000</td>
+				      		<td>출금</td>
+				      		<td>500,000</td>
+				    	</tr>
+				    	<tr>
+				      		<th scope="row">2023-06-07</th>
+				      		<td>순대국</td>
+				      		<td>5,000</td>
+				      		<td>출금</td>
+				      		<td>500,000</td>
+				    	</tr>
+				    	<tr>
+				      		<th scope="row">2023-06-08</th>
+				      		<td>순대국</td>
+				      		<td>5,000</td>
+				      		<td>출금</td>
+				      		<td>500,000</td>
+				    	</tr>
+				    	<tr>
+				      		<th scope="row">2023-06-09</th>
+				      		<td>순대국</td>
+				      		<td>5,000</td>
+				      		<td>출금</td>
+				      		<td>500,000</td>
+				    	</tr>
+				    	<tr>
+				      		<th scope="row">2023-06-10</th>
+				      		<td>순대국</td>
+				      		<td>5,000</td>
+				      		<td>출금</td>
+				      		<td>500,000</td>
+				    	</tr>
+				    	<tr>
+				      		<th scope="row">2023-06-13</th>
+				      		<td>순대국</td>
+				      		<td>5,000</td>
+				      		<td>출금</td>
+				      		<td>500,000</td>
+				    	</tr>
+				    	<tr>
+				      		<th scope="row">2023-06-14</th>
+				      		<td>순대국</td>
+				      		<td>5,000</td>
+				      		<td>출금</td>
+				      		<td>500,000</td>
+				    	</tr>
+				    	<tr>
+				      		<th scope="row">2023-06-15</th>
+				      		<td>순대국</td>
+				      		<td>5,000</td>
+				      		<td>출금</td>
+				      		<td>500,000</td>
 				    	</tr>
 				  	</tbody>
 				</table>
 	    	</div>
     		<div class="carousel-item">
     			<div class="d-flex justify-content-center">
-		    		<div class="rounded border border-dark col-md-3 text-center" style="padding: 30px; background: #FBEFFB;">
+		    		<div class="rounded border border-dark col-md-4 text-center" style="padding: 30px; background: #FBEFFB;">
 		    			<p class="fs-4">예금주: 이준혁</p>
-		    			<p class="fs-4">계좌명: 이준혁 통장 			
+		    			<p class="fs-4">계좌명: 이준혁 통장2</p>			
 		    			<p class="fs-4">계좌번호: 3414-34-3141</p>
 		    			<p class="fs-4">개설일: 2023-06-01</p>
 		    		</div>
 	    		</div>
 	    		<br>
 	    		<div class="d-flex justify-content-center">
-	    			<a class="btn btn-outline-success" role="button" aria-disabled="true" href="accountAdd.html">계좌개설</a>
-	    			<a class="btn btn-outline-primary" role="button" aria-disabled="true" href="accountCorrect.html">계좌수정</a>
+	    			<a class="btn btn-outline-success" role="button" aria-disabled="true" data-bs-toggle="modal" data-bs-target="#accountAdd">계좌개설</a>
+	    			<a class="btn btn-outline-primary" role="button" aria-disabled="true" data-bs-toggle="modal" data-bs-target="#accountCorrect">계좌수정</a>
 	    		</div>
 	    		<br>
 	    		<div class="d-flex justify-content-start">
 	    			<button type="button" class="btn btn-danger col-md-auto" id="btnSearch">
 						<i class="fa-solid fa-magnifying-glass"></i>
 					</button>
-	    			<div class="col-md-2">
+	    			<div class="col-md-1">
     					<select id="" class="form-select">
       						<option selected disabled>기간</option>
       						<option>1개월</option>
@@ -137,63 +191,117 @@
       						<option>6개월</option>
     					</select>
   					</div>
-	    			<div class="col-md-2">
+	    			<div class="col-md-1">
     					<input type="text" class="form-control datepicker" placeholder="시작일">
   					</div>
-	    			<div class="col-md-2">
+	    			<div class="col-md-1">
     					<input type="text" class="form-control datepicker" placeholder="종료일">
   					</div> 
 	    		</div>
 	    		<table class="table">
 				  	<thead>
 				    	<tr>
-				      		<th scope="col">#</th>
-				      		<th scope="col">First</th>
-				      		<th scope="col">Last</th>
-				      		<th scope="col">Handle</th>
+				      		<th scope="col">날짜</th>
+				      		<th scope="col">내용</th>
+				      		<th scope="col">금액</th>
+				      		<th scope="col">입·출금</th>
+				      		<th scope="col">잔액<th>
 				    	</tr>
 				  	</thead>
 			  		<tbody>
 				    	<tr>
-				      		<th scope="row">1</th>
-				      		<td>Mark</td>
-				      		<td>Otto</td>
-				      		<td>@mdo</td>
+				      		<th scope="row">2023-06-01</th>
+				      		<td>순대국</td>
+				      		<td>5,000</td>
+				      		<td>출금</td>
+				      		<td>500,000</td>
 				    	</tr>
 				    	<tr>
-				      		<th scope="row">2</th>
-				      		<td>Jacob</td>
-				      		<td>Thornton</td>
-				      		<td>@fat</td>
+				      		<th scope="row">2023-06-02</th>
+				      		<td>순대국</td>
+				      		<td>5,000</td>
+				      		<td>출금</td>
+				      		<td>500,000</td>
 				    	</tr>
 				    	<tr>
-				      		<th scope="row">3</th>
-				      		<td colspan="2">Larry the Bird</td>
-				      		<td>@twitter</td>
+				      		<th scope="row">2023-06-05</th>
+				      		<td>순대국</td>
+				      		<td>5,000</td>
+				      		<td>출금</td>
+				      		<td>500,000</td>
+				    	</tr>
+				    	<tr>
+				      		<th scope="row">2023-06-07</th>
+				      		<td>순대국</td>
+				      		<td>5,000</td>
+				      		<td>출금</td>
+				      		<td>500,000</td>
+				    	</tr>
+				    	<tr>
+				      		<th scope="row">2023-06-08</th>
+				      		<td>순대국</td>
+				      		<td>5,000</td>
+				      		<td>출금</td>
+				      		<td>500,000</td>
+				    	</tr>
+				    	<tr>
+				      		<th scope="row">2023-06-09</th>
+				      		<td>순대국</td>
+				      		<td>5,000</td>
+				      		<td>출금</td>
+				      		<td>500,000</td>
+				    	</tr>
+				    	<tr>
+				      		<th scope="row">2023-06-10</th>
+				      		<td>순대국</td>
+				      		<td>5,000</td>
+				      		<td>출금</td>
+				      		<td>500,000</td>
+				    	</tr>
+				    	<tr>
+				      		<th scope="row">2023-06-13</th>
+				      		<td>순대국</td>
+				      		<td>5,000</td>
+				      		<td>출금</td>
+				      		<td>500,000</td>
+				    	</tr>
+				    	<tr>
+				      		<th scope="row">2023-06-14</th>
+				      		<td>순대국</td>
+				      		<td>5,000</td>
+				      		<td>출금</td>
+				      		<td>500,000</td>
+				    	</tr>
+				    	<tr>
+				      		<th scope="row">2023-06-15</th>
+				      		<td>순대국</td>
+				      		<td>5,000</td>
+				      		<td>출금</td>
+				      		<td>500,000</td>
 				    	</tr>
 				  	</tbody>
 				</table>
 	    	</div>
 	    	<div class="carousel-item">
 	    		<div class="d-flex justify-content-center">
-		    		<div class="rounded border border-dark col-md-3 text-center" style="padding: 30px; background: #FBEFFB;">
+		    		<div class="rounded border border-dark col-md-4 text-center" style="padding: 30px; background: #FBEFFB;">
 		    			<p class="fs-4">예금주: 이준혁</p>
-		    			<p class="fs-4">계좌명: 이준혁 통장 			
+		    			<p class="fs-4">계좌명: 이준혁 통장3</p>		
 		    			<p class="fs-4">계좌번호: 3414-34-3141</p>
 		    			<p class="fs-4">개설일: 2023-06-01</p>
 		    		</div>
 	    		</div>
 	    		<br>
 	    		<div class="d-flex justify-content-center">
-	    			<a class="btn btn-outline-success" role="button" aria-disabled="true" href="accountAdd.html">계좌개설</a>
-	    			<a class="btn btn-outline-primary" role="button" aria-disabled="true" href="accountCorrect.html">계좌수정</a>
+	    			<a class="btn btn-outline-success" role="button" aria-disabled="true" data-bs-toggle="modal" data-bs-target="#accountAdd">계좌개설</a>
+	    			<a class="btn btn-outline-primary" role="button" aria-disabled="true" data-bs-toggle="modal" data-bs-target="#accountCorrect">계좌수정</a>
 	    		</div>
 	    		<br>
 	    		<div class="d-flex justify-content-start">
 	    			<button type="button" class="btn btn-danger col-md-auto" id="btnSearch">
 						<i class="fa-solid fa-magnifying-glass"></i>
 					</button>
-	    			<div class="col-md-2">
+	    			<div class="col-md-1">
     					<select id="" class="form-select">
       						<option selected disabled>기간</option>
       						<option>1개월</option>
@@ -201,39 +309,93 @@
       						<option>6개월</option>
     					</select>
   					</div>
-	    			<div class="col-md-2">
+	    			<div class="col-md-1">
     					<input type="text" class="form-control datepicker" placeholder="시작일">
   					</div>
-	    			<div class="col-md-2">
+	    			<div class="col-md-1">
     					<input type="text" class="form-control datepicker" placeholder="종료일">
   					</div> 
 	    		</div>
 	    		<table class="table">
 				  	<thead>
 				    	<tr>
-				      		<th scope="col">#</th>
-				      		<th scope="col">First</th>
-				      		<th scope="col">Last</th>
-				      		<th scope="col">Handle</th>
+				      		<th scope="col">날짜</th>
+				      		<th scope="col">내용</th>
+				      		<th scope="col">금액</th>
+				      		<th scope="col">입·출금</th>
+				      		<th scope="col">잔액<th>
 				    	</tr>
 				  	</thead>
 			  		<tbody>
 				    	<tr>
-				      		<th scope="row">1</th>
-				      		<td>Mark</td>
-				      		<td>Otto</td>
-				      		<td>@mdo</td>
+				      		<th scope="row">2023-06-01</th>
+				      		<td>순대국</td>
+				      		<td>5,000</td>
+				      		<td>출금</td>
+				      		<td>500,000</td>
 				    	</tr>
 				    	<tr>
-				      		<th scope="row">2</th>
-				      		<td>Jacob</td>
-				      		<td>Thornton</td>
-				      		<td>@fat</td>
+				      		<th scope="row">2023-06-02</th>
+				      		<td>순대국</td>
+				      		<td>5,000</td>
+				      		<td>출금</td>
+				      		<td>500,000</td>
 				    	</tr>
 				    	<tr>
-				      		<th scope="row">3</th>
-				      		<td colspan="2">Larry the Bird</td>
-				      		<td>@twitter</td>
+				      		<th scope="row">2023-06-05</th>
+				      		<td>순대국</td>
+				      		<td>5,000</td>
+				      		<td>출금</td>
+				      		<td>500,000</td>
+				    	</tr>
+				    	<tr>
+				      		<th scope="row">2023-06-07</th>
+				      		<td>순대국</td>
+				      		<td>5,000</td>
+				      		<td>출금</td>
+				      		<td>500,000</td>
+				    	</tr>
+				    	<tr>
+				      		<th scope="row">2023-06-08</th>
+				      		<td>순대국</td>
+				      		<td>5,000</td>
+				      		<td>출금</td>
+				      		<td>500,000</td>
+				    	</tr>
+				    	<tr>
+				      		<th scope="row">2023-06-09</th>
+				      		<td>순대국</td>
+				      		<td>5,000</td>
+				      		<td>출금</td>
+				      		<td>500,000</td>
+				    	</tr>
+				    	<tr>
+				      		<th scope="row">2023-06-10</th>
+				      		<td>순대국</td>
+				      		<td>5,000</td>
+				      		<td>출금</td>
+				      		<td>500,000</td>
+				    	</tr>
+				    	<tr>
+				      		<th scope="row">2023-06-13</th>
+				      		<td>순대국</td>
+				      		<td>5,000</td>
+				      		<td>출금</td>
+				      		<td>500,000</td>
+				    	</tr>
+				    	<tr>
+				      		<th scope="row">2023-06-14</th>
+				      		<td>순대국</td>
+				      		<td>5,000</td>
+				      		<td>출금</td>
+				      		<td>500,000</td>
+				    	</tr>
+				    	<tr>
+				      		<th scope="row">2023-06-15</th>
+				      		<td>순대국</td>
+				      		<td>5,000</td>
+				      		<td>출금</td>
+				      		<td>500,000</td>
 				    	</tr>
 				  	</tbody>
 				</table>
@@ -248,7 +410,67 @@
 	    	<span class="visually-hidden">Next</span>
 	  	</button>
 	</div>	
-
+	<form>
+		<div class="modal fade" id="accountAdd" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+	  		<div class="modal-dialog">
+	    		<div class="modal-content" style="width: 622px; height: 439px; padding: 50px;">
+	      			<div class="modal-header d-flex justify-content-around">
+	        			<button type="button" class="btn w-50">계좌개설</button>
+	        			<button type="button" class="btn btn-primary w-50" data-bs-toggle="modal" data-bs-target="#accountCorrect">계좌수정</button>
+	      			</div>
+	      			<div class="modal-body d-flex flex-wrap align-items-center">
+						<input type="text" class="form-control" id="accountName" placeholder="계좌이름">
+						<input type="password" class="form-control" id="accountPw" placeholder="비밀번호">
+						<input type="password" class="form-control" id="accountPwCheck" placeholder="비밀번호 확인">
+	      			</div>
+	      			<div class="modal-footer d-flex justify-content-center">
+	      				<button type="button" class="btn btn-primary" id="modalCheck">확인</button>
+	      				<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">취소</button>
+	      			</div>
+	    		</div>
+	  		</div>
+		</div>
+	</form>
+	<form>
+		<div class="modal fade" id="accountCorrect" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+	  		<div class="modal-dialog">
+	    		<div class="modal-content" style="width: 622px; height: 622px; padding: 50px;">
+	      			<div class="modal-header d-flex justify-content-around">
+	        			<button type="button" class="btn w-50" data-bs-toggle="modal" data-bs-target="#accountAdd">계좌개설</button>
+	        			<button type="button" class="btn btn-primary w-50">계좌수정</button>
+	      			</div>
+	      			<div class="modal-body d-flex flex-wrap align-items-center">
+	      				<input type="text" class="form-control" id="accountNumber" placeholder="계좌번호" disabled>
+						<input type="text" class="form-control" id="accountName" placeholder="계좌이름">
+						<input type="password" class="form-control" id="accountPw" placeholder="기존 비밀번호">
+						<input type="password" class="form-control" id="accountNewPw" placeholder="신규 비밀번호">
+						<input type="password" class="form-control" id="accountNewPwCheck" placeholder="비밀번호 확인">
+	      			</div>
+	      			<div class="modal-footer d-flex justify-content-center">
+	      				<button type="button" class="btn btn-primary" id="modalCheck">확인</button>
+	      				<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">취소</button>
+	      				<button type="button" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#deleteCheck">삭제</button>
+	      			</div>
+	    		</div>
+	  		</div>
+		</div>
+	</form>
+	<div class="modal fade" id="deleteCheck" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropTitle" aria-hidden="true">
+  		<div class="modal-dialog">
+    		<div class="modal-content" style="width: 622px; height: 622px; padding: 50px;">
+	    		<div class="modal-header">
+        			<h1 class="modal-title" style="margin-left: 40%;">경고</h1>
+	      		</div>
+      			<div class="modal-body text-center h2" style="margin-top: 25%;">
+        			정말로 삭제 하시겠습니까?
+      			</div>
+      			<div class="modal-footer d-flex justify-content-center">
+        			<button type="button" class="btn btn-danger">삭제</button>
+        			<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">취소</button>
+      			</div>
+    		</div>
+  		</div>
+	</div>	
     <!-- 부트스트랩 JS-->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.7/dist/umd/popper.min.js" integrity="sha384-zYPOMqeu1DAVkHiLqWBUTcbYfZ8osu1Nd6Z89ify25QV9guujx43ITvfi12/QExE" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.min.js" integrity="sha384-Y4oOpwW3duJdCWv5ly8SCFYWqFDsfob/3GkgExXKV4idmbt98QcxXYs9UoXAB7BZ" crossorigin="anonymous"></script>
