--- a/html/accountMain.html
+++ b/html/accountMain.html
@@ -166,7 +166,7 @@
 	    	</div>
     		<div class="carousel-item">
     			<div class="d-flex justify-content-center">
-		    		<div class="rounded border border-dark col-md-4 text-center" style="padding: 30px; background: #FBEFFB;">
+		    		<div class="rounded border border-dark col-md-4 text-center" style="padding: 30px; background: #93eddd;">
 		    			<p class="fs-4">예금주: 이준혁</p>
 		    			<p class="fs-4">계좌명: 이준혁 통장2</p>			
 		    			<p class="fs-4">계좌번호: 3414-34-3141</p>
@@ -284,7 +284,7 @@
 	    	</div>
 	    	<div class="carousel-item">
 	    		<div class="d-flex justify-content-center">
-		    		<div class="rounded border border-dark col-md-4 text-center" style="padding: 30px; background: #FBEFFB;">
+		    		<div class="rounded border border-dark col-md-4 text-center" style="padding: 30px; background: #d5ed93;">
 		    			<p class="fs-4">예금주: 이준혁</p>
 		    			<p class="fs-4">계좌명: 이준혁 통장3</p>		
 		    			<p class="fs-4">계좌번호: 3414-34-3141</p>
@@ -416,7 +416,7 @@
 	    		<div class="modal-content" style="width: 622px; height: 439px; padding: 50px;">
 	      			<div class="modal-header d-flex justify-content-around">
 	        			<button type="button" class="btn w-50">계좌개설</button>
-	        			<button type="button" class="btn btn-primary w-50" data-bs-toggle="modal" data-bs-target="#accountCorrect">계좌수정</button>
+	        			<button type="button" class="btn btn-outline-primary w-50" data-bs-toggle="modal" data-bs-target="#accountCorrect">계좌수정</button>
 	      			</div>
 	      			<div class="modal-body d-flex flex-wrap align-items-center">
 						<input type="text" class="form-control" id="accountName" placeholder="계좌이름">
@@ -424,8 +424,8 @@
 						<input type="password" class="form-control" id="accountPwCheck" placeholder="비밀번호 확인">
 	      			</div>
 	      			<div class="modal-footer d-flex justify-content-center">
-	      				<button type="button" class="btn btn-primary" id="modalCheck">확인</button>
-	      				<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">취소</button>
+	      				<button type="button" class="btn btn-outline-primary" id="modalCheck">확인</button>
+	      				<button type="button" class="btn btn-outline-secondary" data-bs-dismiss="modal">취소</button>
 	      			</div>
 	    		</div>
 	  		</div>
@@ -437,7 +437,7 @@
 	    		<div class="modal-content" style="width: 622px; height: 622px; padding: 50px;">
 	      			<div class="modal-header d-flex justify-content-around">
 	        			<button type="button" class="btn w-50" data-bs-toggle="modal" data-bs-target="#accountAdd">계좌개설</button>
-	        			<button type="button" class="btn btn-primary w-50">계좌수정</button>
+	        			<button type="button" class="btn btn-outline-primary w-50">계좌수정</button>
 	      			</div>
 	      			<div class="modal-body d-flex flex-wrap align-items-center">
 	      				<input type="text" class="form-control" id="accountNumber" placeholder="계좌번호" disabled>
@@ -447,9 +447,9 @@
 						<input type="password" class="form-control" id="accountNewPwCheck" placeholder="비밀번호 확인">
 	      			</div>
 	      			<div class="modal-footer d-flex justify-content-center">
-	      				<button type="button" class="btn btn-primary" id="modalCheck">확인</button>
-	      				<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">취소</button>
-	      				<button type="button" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#deleteCheck">삭제</button>
+	      				<button type="button" class="btn btn-outline-primary" id="modalCheck">확인</button>
+	      				<button type="button" class="btn btn-outline-secondary" data-bs-dismiss="modal">취소</button>
+	      				<button type="button" class="btn btn-outline-danger" data-bs-toggle="modal" data-bs-target="#deleteCheck">삭제</button>
 	      			</div>
 	    		</div>
 	  		</div>
@@ -465,8 +465,8 @@
         			정말로 삭제 하시겠습니까?
       			</div>
       			<div class="modal-footer d-flex justify-content-center">
-        			<button type="button" class="btn btn-danger">삭제</button>
-        			<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">취소</button>
+        			<button type="button" class="btn btn-outline-danger">삭제</button>
+        			<button type="button" class="btn btn-outline-secondary" data-bs-dismiss="modal">취소</button>
       			</div>
     		</div>
   		</div>
