--- a/html/accountMain.html
+++ b/html/accountMain.html
@@ -43,7 +43,7 @@
   		<div class="carousel-inner">
 	    	<div class="carousel-item active">
 	    		<div class="d-flex justify-content-center">
-		    		<div class="rounded border border-dark col-md-4 text-center" style="padding: 30px; background: #FBEFFB;">
+		    		<div class="rounded border border-dark col-md-4 text-center" style="padding: 30px; background: rgb(233, 193, 242);">
 		    			<p class="fs-4">예금주: 이준혁</p>
 		    			<p class="fs-4">계좌명: 이준혁 통장1</p>			
 		    			<p class="fs-4">계좌번호: 3414-34-3141</p>
