--- a/html/depositTransfer.html
+++ b/html/depositTransfer.html
@@ -36,9 +36,9 @@
     	</div>
 	</header>
 	<div class="container-fluid text-center">
-		<h2 style="margin-top: 50px;">이체</h2>
 		<form>
-			<div class="row-md-auto" style="padding: 50px;">
+			<div class="row-md-auto" style="padding: 200px;">
+				<h2 style="margin-bottom: 30px;">이체</h2>
 				<div class="col-md-auto" style="margin: 10px;">
 					<select id="selectAccount" class="form-select">
    						<option selected disabled>계좌선택</option>
