--- a/html/index.html
+++ b/html/index.html
@@ -153,7 +153,7 @@
     			<li><a href="#" class="nav-link px-2 text-secondary">KOKOA BANK</a></li>
     		</ul>
     		<div class="col-md-4 d-flex align-items-center justify-content-end">
-      			<span class="mb-3 mb-md-0 text-body-secondary">&copy; 2023 Company, Inc</span>
+      			<span class="mb-3 mb-md-0 text-body-secondary">Copyright © KokoaBank Corp. All rights reserved.</span>
     		</div>
   		</footer>
 	</div>
